--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sparrow JWELLERS</title>
+    <title>JWELLERS</title>
 
     <!-- Library CSS -->
     <link href="css/wedding_library.css" rel="stylesheet">
